Fixed media querry message on small devices

--- a/src/Pages/Homepage.module.css
+++ b/src/Pages/Homepage.module.css
@@ -47,14 +47,21 @@
     height: 100vh;
     width: 100vw;
     padding: 20px;
-    color: rgb(244, 240, 255) !important;
+    color: #333;
     font-family: Arial, sans-serif;
-    text-align: center;
-    background-color: #333 !important;
+    text-align: center; 
     position: fixed;
     top: 0;
     left: 0;
     z-index: 9999; 
+  }
+  .unsupported-message ,
+  p {
+    color: rgb(244, 240, 255) !important;
+    background-color: #333 !important;
+    border-radius: 10px;
+   padding: 20px;
+   
   }
 
   .home section{
